# adaptors

./: CMakeLists.txt  README.md  help.cmake
examples/: help_lib.h
examples/adaptors/1.basic/: main.cpp
examples/adaptors/2.overloading/: main.cpp
examples/adaptors/4.features/: main.cpp
examples/adaptors/5.styles/: main.cpp
examples/adaptors/6.fluent/: main.cpp
examples/adaptors/benchmark/: main.cpp
examples/adaptors/concepts-features/: main.cpp
examples/adaptors/from_string/: main.cpp
examples/adaptors/lib/: main.cpp
examples/adaptors/real_usage/: main.cpp
examples/adaptors/traits/: main.cpp
examples/basic/: CMakeLists.txt  main.cpp
examples/curry/basic/: main.cpp
examples/curry/new_adaptors/: main.cpp
examples/curry/reverse/: main.cpp
examples/curry/uncurry/: main.cpp
examples/overloading/: CMakeLists.txt  main.cpp
examples/real_usage/: CMakeLists.txt  main.cpp
examples/traits/: CMakeLists.txt  main.cpp
src/: universal_adaptor.h  universal_curry.h
